syntax = "proto2";

enum Phase {
    PHASE_TAKE_LOANS = 0;
    PHASE_AUCTION = 1;
    PHASE_TAKE_POWERS = 2;
    PHASE_BUILD = 3;
}

enum Power {
    POWER_FIRST_BUILD = 0;
    POWER_FIRST_MOVE = 1;
    POWER_ENGINEER = 2;
    POWER_LOCOMOTIVE = 3;
    POWER_URBANIZATION = 4;
    POWER_PRODUCTION = 5;
    POWER_TURN_ORDER = 6;
}

message TakeLoansAction {
    optional int32 loans_to_take = 1;
}

message BidAction {
    optional int32 amount = 1;
    optional bool pass = 2;
}

message TakePowerAction {
    optional Power power = 1;
}

message Action {
    optional TakeLoansAction loans = 1;
    optional BidAction bid = 2;
    optional TakePowerAction take_power = 3;
}

message Options {
    repeated Action action = 1;
}

message PhaseState {
    optional int32 auction_pass_order = 1;
    optional int32 last_bid = 2;
}

message Player {
    optional string name = 1;
    optional PhaseState state = 2;
    optional int32 loans = 3;
    optional int32 cash = 4;
    optional Power power = 5;
}

message RoundState {
    optional int32 current_bid = 1;
}

message Game {
    repeated Player player = 1;
    repeated int32 order = 2;
    optional int32 current_order_index = 3;
    optional Phase phase = 4;
    optional RoundState state = 5;
    repeated Power power = 6;
}

message Test {
    optional Game game = 1;
    optional Phase phase = 5;
    optional Options expected_options = 2;
    optional int32 selected_action = 3;
    optional Game result = 4;
}

